.kotleni/k3s/traefik-core.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
