.kotleni/k3s/dickbot-tg.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dickbot
    labels:
        app: dickbot
spec:
    replicas: 1
    selector:
        matchLabels:
            app: dickbot
    template:
        metadata:
            labels:
                app: dickbot
        spec:
            tolerations:
                - key: 'node.kubernetes.io/unreachable'
                  operator: 'Exists'
                  effect: 'NoExecute'
                  tolerationSeconds: 60
                - key: 'node.kubernetes.io/not-ready'
                  operator: 'Exists'
                  effect: 'NoExecute'
                  tolerationSeconds: 60
            affinity:
                nodeAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - weight: 100
                          preference:
                              matchExpressions:
                                  - key: kubernetes.io/hostname
                                    operator: In
                                    values:
                                        - rookie
            containers:
                - name: dickbot
                  image: kotleni/dickbot-tg
