.kotleni/k3s/kuma.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  serviceName: "uptime-kuma"
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      nodeSelector:
        kubernetes.io/hostname: amber
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: kuma-data
          mountPath: /app/data
  volumeClaimTemplates:
  - metadata:
      name: kuma-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 256M
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: 3001
